force-app/main/default/objects/Lead/fields/Add_to_ET_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Add_to_ET_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to ET Newsletter?</label>
    <type>Checkbox</type>
</CustomField>