force-app/main/default/objects/Lead/fields/CloudingoAgent__ACD__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__ACD__c</fullName>
    <label>Address Congressional District</label>
    <length>2</length>
    <type>Text</type>
</CustomField>