force-app/main/default/objects/Lead/fields/CloudingoAgent__ALA__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__ALA__c</fullName>
    <label>Address Latitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>