force-app/main/default/objects/Lead/fields/CloudingoAgent__ALO__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__ALO__c</fullName>
    <label>Address Longitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>