force-app/main/default/objects/Lead/fields/CloudingoAgent__AR__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__AR__c</fullName>
    <label>Address Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>