force-app/main/default/objects/Lead/fields/CloudingoAgent__ATZ__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__ATZ__c</fullName>
    <label>Address Timezone</label>
    <length>48</length>
    <type>Text</type>
</CustomField>