force-app/main/default/objects/Lead/fields/CloudingoAgent__LES__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__LES__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead Email Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>